--- a/wooden.html
+++ b/wooden.html
@@ -934,7 +934,7 @@
         </div>
     </div>
     <br>
-    <!--- Shop by Catogries
+    <!--- Shop by Catogries Added
     ========================-->
     <div id="D" class="container">
         <div class="section-title center">
