--- a/acrylic.html
+++ b/acrylic.html
@@ -601,6 +601,46 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/acrylic/43.webp" class="card-img-top card-img-zoom"  alt="Acrylic Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">A43</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/acrylic/44.webp" class="card-img-top card-img-zoom"  alt="Acrylic Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">A44</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/acrylic/45.webp" class="card-img-top card-img-zoom"  alt="Acrylic Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">A45</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/acrylic/46.webp" class="card-img-top card-img-zoom"  alt="Acrylic Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">A46</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <br>
@@ -660,4 +700,5 @@
     <script type="text/javascript" src="js/bJS/bootstrap.js"></script>
     <script type="text/javascript" src="js/jQuery.js"></script>
 </body>
+
 </html>
