--- a/single.html
+++ b/single.html
@@ -210,26 +210,26 @@
                     </div>
                 </div>
             </div> 
-            <!--<div class="col-lg-3 col-md-6 col-6">-->
-            <!--    <div class="card" style="text-align: center;">-->
-            <!--        <div class="image-container">-->
-            <!--            <img src="images/single/4.webp" class="card-img-top card-img-zoom"  alt="single Swing">-->
-            <!--        </div>-->
-            <!--        <div class="card-body">-->
-            <!--            <h3 class="card-title">S4</h3>-->
-            <!--        </div>-->
-            <!--    </div>-->
-            <!--</div> -->
-            <!--<div class="col-lg-3 col-md-6 col-6">-->
-            <!--    <div class="card" style="text-align: center;">-->
-            <!--        <div class="image-container">-->
-            <!--            <img src="images/single/5.webp" class="card-img-top card-img-zoom"  alt="single Swing">-->
-            <!--        </div>-->
-            <!--        <div class="card-body">-->
-            <!--            <h3 class="card-title">S5</h3>-->
-            <!--        </div>-->
-            <!--    </div>-->
-            <!--</div> -->
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/single/4.webp" class="card-img-top card-img-zoom"  alt="single Swing">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">S4</h3>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/single/5.webp" class="card-img-top card-img-zoom"  alt="single Swing">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">S5</h3>
+                    </div>
+                </div>
+            </div>
             <div class="col-lg-3 col-md-6 col-6">
                 <div class="card" style="text-align: center;">
                     <div class="image-container">
@@ -250,26 +250,26 @@
                     </div>
                 </div>
             </div> 
-            <!--<div class="col-lg-3 col-md-6 col-6">-->
-            <!--    <div class="card" style="text-align: center;">-->
-            <!--        <div class="image-container">-->
-            <!--            <img src="images/single/8.webp" class="card-img-top card-img-zoom"  alt="single Swing">-->
-            <!--        </div>-->
-            <!--        <div class="card-body">-->
-            <!--            <h3 class="card-title">S8</h3>-->
-            <!--        </div>-->
-            <!--    </div>-->
-            <!--</div> -->
-            <!--<div class="col-lg-3 col-md-6 col-6">-->
-            <!--    <div class="card" style="text-align: center;">-->
-            <!--        <div class="image-container">-->
-            <!--            <img src="images/single/9.webp" class="card-img-top card-img-zoom"  alt="single Swing">-->
-            <!--        </div>-->
-            <!--        <div class="card-body">-->
-            <!--            <h3 class="card-title">S9</h3>-->
-            <!--        </div>-->
-            <!--    </div>-->
-            <!--</div> -->
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/single/8.webp" class="card-img-top card-img-zoom"  alt="single Swing">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">S8</h3>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img src="images/single/9.webp" class="card-img-top card-img-zoom"  alt="single Swing">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">S9</h3>
+                    </div>
+                </div>
+            </div> 
             <div class="col-lg-3 col-md-6 col-6">
                 <div class="card" style="text-align: center;">
                     <div class="image-container">
@@ -540,4 +540,5 @@
     <script type="text/javascript" src="js/bJS/bootstrap.js"></script>
     <script type="text/javascript" src="js/jQuery.js"></script>
 </body>
+
 </html>
