--- a/wooden.html
+++ b/wooden.html
@@ -931,6 +931,126 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/76.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W76</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/77.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W77</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/78.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W78</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/79.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W79</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/80.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W80</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/81.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W81</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/82.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W82</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/83.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W83</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/84.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W84</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/85.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W85</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/86.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W86</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-6">
+                <div class="card" style="text-align: center;">
+                    <div class="image-container">
+                        <img loading="lazy" src="images/wooden/87.webp" class="card-img-top card-img-zoom"  alt="wooden Jhula">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">W87</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <br>
